corrected alignment of elements in the form

--- a/src/App.css
+++ b/src/App.css
@@ -134,18 +134,23 @@ form {
 
 form > input {
   display: inline-block;
+  position: relative;
+  top: 0px;
   width: 33%;
   height: 36px;
   line-height: 24px;
   padding-left: 10px;
-  font-size: 14px;
+  font-size: 16px;
   border: none;
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
+  font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 button[type=submit] {
   display: inline-block;
+  position: absolute;
+  top: 37.75px;
   /* margin: 0 auto; */
   background-color: #c3d5f0;
   border: none;
@@ -157,15 +162,19 @@ button[type=submit] {
 
 .Dropdown {
   display: inline-block;
+  position: absolute;
+  top: 0.75px;
   /* margin: 0 auto; */
   border: none;
   width: 33%;
-  height: 26px;
+  /* height: 26px; */
   border-radius: 0;
   color: black;
+  font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .Dropdown > div {
+  height: 25px;
   border: none;
   border-radius: 0;
   border-left: 1px dotted var(--theme-color);
